# Quader

./: .gitignore  .gitmodules  LICENSE  Quader.sln  README.md  Tetramonio.sln
core/quader_engine/: Cargo.toml
core/quader_engine/src/: board.rs  board_cell_holder.rs  board_command.rs  board_manager.rs  cell_holder.rs  command_dispatcher.rs  damage_calculation.rs  damage_calculator.rs  game_settings.rs  gravity_mgr.rs  lib.rs  piece.rs  piece_generators.rs  piece_mgr.rs  piece_points.rs  piece_queue.rs  primitives.rs  replays.rs  rng_manager.rs  scoring.rs  time_mgr.rs  utils.rs  wall_kick_data.rs
core/quader_engine/tests/: sample.rs
core/quader_engine_c_api/: Cargo.toml  quader_engine.h
core/quader_engine_samples/: Cargo.toml
core/quader_engine_samples/src/: board_controller.rs  debugging.rs  game_root.rs  main.rs  renderable.rs  updatable.rs
core/quader_skynet/: Cargo.toml
src/: Cargo.toml  Quader.sln  Quader.sln.DotSettings  build-wasm.sh  rust-toolchain  shell.nix
src/ColdClearNet/: ColdClear.cs  ColdClearInterop.cs  ColdClearNet.csproj
src/ColdClearNet/Enums/: Movement.cs
src/ColdClearNet/Structs/: Move.cs  Options.cs  PlanPlacement.cs  Weights.cs
src/Quader.Bot.Api/: BotMove.cs  BotRunMode.cs  IBot.cs  Quader.Bot.Api.csproj
src/Quader.Bot.Api/Requests/: BotMovementRequestData.cs  MoveRequestData.cs  ResetRequestData.cs  StartRequestData.cs
src/Quader.Bot.Client/: Quader.Bot.Client.csproj
src/Quader.Client/: ContentPathGenerator.cs  FAudio.lib  FNA3D.lib  GameRoot.cs  Quader.Client.csproj  rd.xml
src/Quader.Client.DesktopGL/: AssemblyInfo.cs  ContentPathGenerator.cs  ContentPathGenerator.tt  EntityExtensions.cs  GameRoot.cs  InputHandler.cs  Program.cs  Quader.Client.DesktopGL.csproj  RotationImageToJsonConverter.cs  RotationTableConverter.cs  app.manifest  libfmod.dylib
src/Quader.Client.DesktopGL.Tests/: Quader.Client.DesktopGL.Tests.csproj  UnitTest1.cs
src/Quader.Client.DesktopGL/Audio/: Channel.cs  ChannelGroup.cs  ConeSettings3D.cs  CoreSystem.cs  DistanceFilter3D.cs  FMODManager.cs  FileLoader.cs  I3DControl.cs  IChannelControl.cs  Listener3D.cs  Occlusion3D.cs  PointerLinker.cs  Sound.cs  SoundGroup.cs  VectorExtensions.cs
src/Quader.Client.DesktopGL/Components/: BoardBuilder.cs  BoardComponent.cs  BoardFactory.cs  BoardHolder.cs  BoardImGuiComponent.cs  BoardManagerComponent.cs  BoardRendererComponent.cs  BoardTimeManager.cs  GameStateComponent.cs  PieceHandlerComponent.cs  PieceRendererComponent.cs  SharedSettings.cs  TestComponent.cs  TestRenderer.cs
src/Quader.Client.DesktopGL/Config/: Audio.cs  Controls.cs  GameConfig.cs  Gameplay.cs  Handling.cs  IGameConfigEntry.cs
src/Quader.Client.DesktopGL/Content/: Content.mgcb  Content.npl
src/Quader.Client.DesktopGL/Engine/: Board.cs  BoardCell.cs  BoardCellType.cs  BoardOld.cs  BoardPieceType.cs  GlobalTimeManager.cs  Piece.cs  PieceContainer.cs  PieceMovedEventArgs.cs  PieceType.cs  PieceUtils.cs
src/Quader.Client.DesktopGL/InputMgr/: IInputCommand.cs  IInputHandleable.cs  InputCommandMapper.cs  InputEntry.cs  InputHandler.cs
src/Quader.Client.DesktopGL/Managers/: BotIpcManager.cs
src/Quader.Client.DesktopGL/RotationEncoder/: RotationTableTests.cs
src/Quader.Client.DesktopGL/Scenes/: GameplayScene.cs  ReplayScene.cs  TestComponent.cs
src/Quader.Client.DesktopGL/Serialization/: ColorSerializer.cs
src/Quader.Client.DesktopGL/Skinning/: BoardSkin.cs
src/Quader.Client.DesktopGL/Utils/: RenderTarget2DExtensions.cs  RenderToTexture.cs
src/Quader.Client/Components/: BoardBuilder.cs  BoardManagerComponent.cs  SharedSettings.cs
src/Quader.Client/Config/: GameConfig.cs  Handling.cs
src/Quader.Client/EngineApi/: ApiSharp.cs
src/Quader.Client/Scenes/: GameplayScene.cs  ReplayScene.cs  SceneBase.cs  StartupScene.cs
src/Quader.Client/Skinning/: BoardSkin.cs
src/Quader.Engine/: AttackBuilder.cs  Board.PieceHandling.cs  Board.Scoring.cs  Board.Serialization.cs  Board.cs  BoardCellContainer.cs  BoardEncoding.cs  BoardPieceHolder.cs  BoardUtils.cs  GlobalTimeManager.cs  ListExtensions.cs  MoveTypeAttribute.cs  PieceMovedEventArgs.cs  Quader.Engine.csproj  Quader.Engine.csproj.DotSettings  rd.xml
src/Quader.Engine.DllTests/: Program.cs  QuaderEngineInterop.cs
src/Quader.Engine.Tests/: PieceUtils_Tests.cs  Quader.Engine.Tests.csproj
src/Quader.Engine/Collections/: Deque.cs
src/Quader.Engine/Numerics/: Rectangle.cs
src/Quader.Engine/PieceGenerators/: PieceGeneratorBag7.cs  PieceGeneratorFactory.cs  PieceGeneratorFullRandom.cs
src/Quader.Engine/Pieces/: PieceBase.cs  PieceRotationType.cs  PieceUtils.cs
src/Quader.Engine/Replays/: BoardHardDropInfo.cs  BoardMove.cs  BoardMoveHolder.cs  GameState.cs  Replay.cs  ReplayMove.cs  ReplayMoveType.cs
src/Quader.Engine/Serialization/: BoardEncoding.cs  BoardSerializer.cs
src/Quader.Engine/Settings/: AttackSettings.cs  BoardSettings.cs  GameSettings.cs  GravitySettings.cs
src/Quader.Engine/Utils/: CircularArray.cs  GlobalTimeManager.cs
src/Quader.Web.Frontend/: README.md
src/Quader.Web.Frontend/src/: index.html
src/Quader.WebApi/: DbInitializer.cs  Program.cs  Quader.WebApi.csproj  Startup.cs  WeatherForecast.cs  appsettings.json
src/Quader.WebApi.Tests/: Quader.WebApi.Tests.csproj  UnitTest1.cs
src/Quader.WebApi/Configuration/: AppSettings.cs  HashingOptions.cs
src/Quader.WebApi/Controllers/: AuthController.cs  UserController.cs  WeatherForecastController.cs
src/Quader.WebApi/Migrations/: QuaderMainContextModelSnapshot.cs
src/Quader.WebApi/Models/: ErrorResponse.cs  ExceptionResult.cs  SuccessResponse.cs
src/Quader.WebApi/Properties/: launchSettings.json
src/client/: Cargo.toml
src/client-prototype/: Cargo.toml
src/client-prototype/src/: assets.rs  board_manager.rs  (+10 more)
src/cs/: .gitignore  Cargo.toml  cabal.project  cs.cabal  flake.nix  hie.yaml  package.yaml
src/engine/: Cargo.toml
src/engine-c-api/: Cargo.toml
src/lib/: Cargo.toml
src/server/: .env  Cargo.toml
src/server-old/: .env  Cargo.toml
src/server-prototype/: Cargo.toml
src/skynet/: Cargo.toml
src/web-api/: .env  Cargo.toml
(+387 files in other folders)
