[workspace]
resolver = "2"
members = [
    "engine",
    "client-prototype",
    "server",
    "engine-c-api",
    "skynet", 
    #"client",
    "web-api"
]

[profile.release]
lto = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
