[workspace]
resolver = "2"
members = [
    "engine",
    "client",
    "skynet",
    "web-api",
    "server"
]

[profile.release]
lto = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
