[package]
name = "quader_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"rand"="0.8.5"
"serde"= { version = "1.0", features = ["derive"] }
"serde_json"="1.0"
"enumset"="1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
"getrandom"={version = "0.2.10", features = ["js"]}