[package]
name = "quader_engine_c_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quader_engine"
crate-type = ["cdylib", "staticlib"]

[dependencies]
quader_engine = { path = "../quader_engine" }
