[package]
name = "quader_engine_samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"quader_engine" = { path = "../quader_engine" }
"sdl2" = "0.35"
"imgui"="0.11"
"imgui-glow-renderer"="0.11"
"imgui-sdl2"="0.15"
"glow"="0.12"