[package]
name = "quader_engine_samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"quader_engine" = { path = "../quader_engine" }
macroquad = "0.4.4"
serde = "1.0.188"
macroquad-profiler = "0.2.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
