[package]
name = "quader_client_prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quader_engine = { path = "../engine" }
quader_skynet = { path = "../skynet" }
macroquad = "0.4.4"
serde = "1.0.188"
macroquad-profiler = "0.2.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
tungstenite = "0.21"
url = { version = "2.1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
"getrandom"={version = "0.2.10", features = ["js"]}