[package]
name = "quader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quader_engine = { path = "../engine" }
quader_skynet = { path = "../skynet" }
bevy = { version =  "0.12", features = ["dynamic_linking"] }
bevy-inspector-egui = { version = "0.22.0" }
bevy_framepace = { version = "0.14" }
colored = { version = "2.1.0", optional = true }
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json= "1.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
"getrandom"={version = "0.2.10", features = ["js"]}

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
