[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quader_engine = { path = "../engine" }
tokio = { version = "1.34.0", features = ["macros", "sync", "rt-multi-thread", ] }
tokio-stream = "0.1.14"
actix-web = "4.4.1"
actix-ws = "0.2"
anyhow = "1.0.79"
async-trait = "0.1.77"
derive_more = "0.99.17"
dotenvy = "0.15.7"
env_logger = "0.10.1"
futures-util = "0.3.30"
serde_json = "1.0"
log = "0.4.20"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"

[dependencies.validator]
version = "0.16.1"
features = ["derive"]

[dependencies.uuid]
version = "1.6.1"
features = ["serde", "v4"]

[dependencies.chrono]
version = "0.4.31"
features = [ "serde" ]

[dependencies.serde]
version = "1.0.194"
features = [ "derive" ]
