[package]
name = "quader_skynet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quader_engine = { path = "../engine" }
cold-clear = { git = "https://github.com/MinusKelvin/cold-clear" }
libtetris = { git = "https://github.com/MinusKelvin/cold-clear" }
enumset = "1.1.3"