[package]
name = "web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
anyhow = "1.0.79"
argon2 = "0.5.2"
derive_more = "0.99.17"
dotenvy = "0.15.7"
email_address = "0.2.4"
env_logger = "0.10.1"
fake = "2.9.2"
futures-util = "0.3.30"
jsonwebtoken = "9.2.0"
log = "0.4.20"
proptest = "1.4.0"
serde_json = "1.0.111"
utoipa = { version = "4.2.0", features = ["chrono", "uuid", "actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }

[dependencies.validator]
version = "0.16.1"
features = ["derive"]

[dependencies.uuid]
version = "1.6.1"
features = ["serde", "v4"]

[dependencies.chrono]
version = "0.4.31"
features = [ "serde" ]

[dependencies.serde]
version = "1.0.194"
features = [ "derive" ]

[dependencies.sqlx]
version = "0.7.3"
features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "uuid"]
